* 20201224 Add new stop-point XCLIENT-HELO to address lack of specificity
           when mixing XCLIENT and HELO stop-point.
* 20201224 In --dump output, print a raw proxy string in base64 if version 2
* 20201224 --proxy argument can now (optionally) be provided with the protocol
           prefix.
* 20201224 Allow --proxy to read string from a file, and allow it to be
           base64 encoded.
* 20201224 Change error message when missing --proxy* option to list every
           missing option instead of just the first missing.
* 20201224 --no-hints should also include --no-info-hints, analogous to
           --hide-informational/--hide-all which already worked this way.
* 20201225 Add autocat feature to test tools
* 20201225 Add exit code checking to regression tests
* 20210116 Fix dead link to openssl cipher list format documentation in
           --tls-cipher doc.
* 20210116 Update copyright year to 2021
* 20210116 Add TLS informational line showing whether client certificate was
           by the server and whether swaks sent it.
* 20210116 Use named constant in TLS code instead of magic number
* 20210117 Add TLS informational line showing the verification status of
           the server certificate.
* 20210117 Change --tls-verify to require both cert and hostname verification.
           Add --tls-verify-ca (previous behavior of --tls-verify) and
           --tls-verify-host to just require verification of the certificate
           against the local CA or the target hostname or IP, respectively.
* 20210117 Add --tls-verify-target to set a host to be used for verification,
           overriding the internal connection information.
* 20210123 Clarify --auth-optional-strict documentation
* 20210123 Adding --cc and --bcc options.
* 20210123 Add PROXY as a valid --quit-after, --drop-after, and
           --drop-after-send argument.
* 20211208 Fix deprecated use of --body in doc (#39)
* 20220505 Update copyright year to 2022