@@ -106,15 +106,6 @@ perl Makefile.PL INSTALL_BASE=~/
         </ul>
     </div>
     <div class="row">
-        <h5>Linux</h5>
-        <ul>
-          <li><a href='https://packages.debian.org/swaks'>Debian</a> - <code>sudo apt-get install swaks</code></li>
-          <li><a href='https://packages.ubuntu.com/swaks'>Ubuntu</a> - <code>sudo apt-get install swaks</code></li>
-          <li><a href='https://src.fedoraproject.org/rpms/swaks'>Fedora</a> - <code>sudo dnf install swaks</code></li>
-          <li><a href='https://www.archlinux.org/packages/community/any/swaks/'>Arch</a> - <code>sudo pacman -S swaks</code></li>
-        </ul>
-    </div>
-    <div class="row">
         <h5>BSD</h5>
         <ul>
           <li><a href='https://svnweb.freebsd.org/ports/head/mail/swaks/'>FreeBSD</a> - <code>pkg install swaks</code></li>
